--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>ProjecteWeb</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hola aquest es el meu lloc web!!!</h1>
-</body>
+    <button>Clic aquí per una nova característica</button>
+  </body>
 </html>
