--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <h1>Hola aquest es el meu lloc web!!!</h1>
-    <button>Clic aquí per una nova característica</button>
+
     <img src="http://placekitten.com/300/200" alt="gatet" />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam blanditiis
+      sed, perspiciatis placeat repudiandae aliquam atque alias eveniet
+      reiciendis natus. Voluptatibus sint maxime dolore sed quasi, hic labore
+      doloribus repudiandae!
+    </p>
+    <button>Clic aquí per una nova característica</button>
   </body>
 </html>
